--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">EnsaBook</string>
     <string name="todo">TODO</string>
+    <string name="reserve">RESERVE</string>
+    <string name="channel_name">" Favorite Book"</string>
+    <string name="channel_id">Favorite</string>
+
+    <string name="username">Username</string>
+    <string name="name">Name</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+
+    <string name="loginbuton">Login</string>
 </resources>
